WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154334
JSDOMWindow::put should not do the same thing twice in different ways
https://bugs.webkit.org/show_bug.cgi?id=154334
Summary
JSDOMWindow::put should not do the same thing twice in different ways
Gavin Barraclough
Reported
2016-02-17 00:59:19 PST
It either calls JSGlobalObject::put or Base::put. Hint: these are basically the same thing. In the latter case it might call lookupPut. That's redundant; JSObject::put handles static table entries.
Attachments
Fix
(4.66 KB, patch)
2016-02-17 01:04 PST
,
Gavin Barraclough
cdumez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2016-02-17 01:04:34 PST
Created
attachment 271547
[details]
Fix
Gavin Barraclough
Comment 2
2016-02-17 01:05:15 PST
All red patch! Whoooo!
Chris Dumez
Comment 3
2016-02-17 08:45:37 PST
Comment on
attachment 271547
[details]
Fix r=me
Gavin Barraclough
Comment 4
2016-02-17 11:26:37 PST
Transmitting file data .... Committed revision 196702.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug