JSDOMWindow::put should not do the same thing twice https://bugs.webkit.org/show_bug.cgi?id=154334

Reviewed by Chris Dumez.

It either calls JSGlobalObject::put or Base::put. Hint: these are basically the same thing.
In the latter case it might call lookupPut. That's redundant; JSObject::put handles static
table entries.

Source/JavaScriptCore:

* runtime/JSGlobalObject.h:
(JSC::JSGlobalObject::hasOwnPropertyForWrite): Deleted.
    - no longer needed.

Source/WebCore:

* bindings/js/JSDOMWindowCustom.cpp:
(WebCore::JSDOMWindow::put):
    - just call Base::put.
(WebCore::JSDOMWindow::putByIndex):
    - just call Base::putByIndex.



Canonical link: https://commits.webkit.org/172456@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196702 268f45cc-cd09-0410-ab3c-d52691b4dbfc